# universal-dm

./: README-zh_CN.md  README.md  docker-compose.yml
backend/: pyproject.toml  test.py
backend/admin/: models.py  schema.py
backend/admin/api/: serializers.py  views.py
backend/back/: settings.py  urls.py  views.py
backend/utils/: auth.py  cmn_class.py  exception_handler.py  jwt.py  mixin.py
